fix: table text issue

--- a/example/storybook/src/components/Actionsheet/index.stories.mdx
+++ b/example/storybook/src/components/Actionsheet/index.stories.mdx
@@ -16,7 +16,7 @@ import {
   AppProvider,
   CodePreview,
   Table,
-  Text,
+  InlineCode,
   AddIcon,
   InfoIcon,
 } from '@gluestack/design-system';
@@ -77,20 +77,23 @@ function App(){
           <Actionsheet.DragIndicatorWrapper>
             <Actionsheet.DragIndicator />
           </Actionsheet.DragIndicatorWrapper>
-          <Actionsheet.Item onPress={handleClose}>
+          <Actionsheet.Item>
             <Actionsheet.ItemText>Community</Actionsheet.ItemText>
           </Actionsheet.Item>
-          <Actionsheet.Item onPress={handleClose}>
+          <Actionsheet.Item>
             <Actionsheet.ItemText>Plugins</Actionsheet.ItemText>
           </Actionsheet.Item>
-          <Actionsheet.Item onPress={handleClose}>
+          <Actionsheet.Item>
             <Actionsheet.ItemText>Theme</Actionsheet.ItemText>
           </Actionsheet.Item>
-          <Actionsheet.Item onPress={handleClose}>
+          <Actionsheet.Item>
             <Actionsheet.ItemText>Settings</Actionsheet.ItemText>
           </Actionsheet.Item>
-          <Actionsheet.Item onPress={handleClose}>
+          <Actionsheet.Item>
             <Actionsheet.ItemText>Add account</Actionsheet.ItemText>
+          </Actionsheet.Item>
+          <Actionsheet.Item onPress={handleClose}>
+            <Actionsheet.ItemText>Close</Actionsheet.ItemText>
           </Actionsheet.Item>
         </Actionsheet.Content>
       </Actionsheet>
@@ -141,163 +144,178 @@ It inherits all the properties of React Native's [View](https://reactnative.dev/
     <Table.THead sx={{ _dark: { bg: '$gray800' }, _light: { bg: '$gray100' } }}>
       <Table.TR>
         <Table.TH>
-          <Text>Prop</Text>
+          <Table.TText>Prop</Table.TText>
         </Table.TH>
         <Table.TH>
-          <Text>Type</Text>
+          <Table.TText>Type</Table.TText>
         </Table.TH>
         <Table.TH>
-          <Text>Default</Text>
+          <Table.TText>Default</Table.TText>
         </Table.TH>
         <Table.TH>
-          <Text>Description</Text>
+          <Table.TText>Description</Table.TText>
         </Table.TH>
       </Table.TR>
     </Table.THead>
     <Table.TBody>
       <Table.TR>
         <Table.TD>
-          <Text>isOpen</Text>
+          <Table.TText>
+            <InlineCode>isOpen</InlineCode>
+          </Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>boolean</Text>
+          <Table.TText>boolean</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>-</Text>
+          <Table.TText>-</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>
-            If true, the ActionSheet will open. Useful for controllable state
-            behavior.
-          </Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>onClose</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>{`() => any`}</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>-</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>Callback invoked when the modal is closed.</Text>
+          <Table.TText>{`If true, the ActionSheet will open. Useful for controllable state behavior.`}</Table.TText>
         </Table.TD>
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>useRNModal</Text>
+          <Table.TText>
+            <InlineCode>onClose</InlineCode>
+          </Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>boolean</Text>
+          <Table.TText>{`() => any`}</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>false</Text>
+          <Table.TText>-</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>If true, renders react-native native modal.</Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>defaultIsOpen</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>boolean</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>-</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>Specifies the default open state of the ActionSheet.</Text>
+          <Table.TText>Callback invoked when the modal is closed.</Table.TText>
         </Table.TD>
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>avoidKeyboard</Text>
+          <Table.TText>
+            <InlineCode>useRNModal</InlineCode>
+          </Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>boolean</Text>
+          <Table.TText>boolean</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>-</Text>
+          <Table.TText>false</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>If true, the ActionSheet will avoid the keyboard.</Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>closeOnOverlayClick</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>boolean</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>-</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>
-            If true, the ActionSheet will close when the overlay is clicked.
-          </Text>
+          <Table.TText>{`If true, renders react-native native modal.`}</Table.TText>
         </Table.TD>
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>isKeyboardDismissable</Text>
+          <Table.TText>
+            <InlineCode>defaultIsOpen</InlineCode>
+          </Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>boolean</Text>
+          <Table.TText>boolean</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>-</Text>
+          <Table.TText>-</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>If true, the keyboard can dismiss the ActionSheet.</Text>
-        </Table.TD>
-      </Table.TR>
-      <Table.TR>
-        <Table.TD>
-          <Text>animationPreset</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>`'slide'` &#124; `'fade'`</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>`'slide'`</Text>
-        </Table.TD>
-        <Table.TD>
-          <Text>Specifies the animation preset for the ActionSheet.</Text>
+          <Table.TText>{`Specifies the default open state of the ActionSheet.`}</Table.TText>
         </Table.TD>
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>contentSize</Text>
+          <Table.TText>
+            <InlineCode>avoidKeyboard</InlineCode>
+          </Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>any</Text>
+          <Table.TText>boolean</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>-</Text>
+          <Table.TText>-</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>Specifies the content size for the ActionSheet.</Text>
+          <Table.TText>{`If true, the ActionSheet will avoid the keyboard.`}</Table.TText>
         </Table.TD>
       </Table.TR>
       <Table.TR>
         <Table.TD>
-          <Text>children</Text>
+          <Table.TText>
+            <InlineCode>closeOnOverlayClick</InlineCode>
+          </Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>any</Text>
+          <Table.TText>boolean</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>-</Text>
+          <Table.TText>-</Table.TText>
         </Table.TD>
         <Table.TD>
-          <Text>The content to display inside the ActionSheet.</Text>
+          <Table.TText>{`If true, the ActionSheet will close when the overlay is clicked.`}</Table.TText>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Table.TText>
+            <InlineCode>isKeyboardDismissable</InlineCode>
+          </Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>boolean</Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>-</Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>{`If true, the keyboard can dismiss the ActionSheet.`}</Table.TText>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Table.TText>
+            <InlineCode>animationPreset</InlineCode>
+          </Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>`'slide'` &#124; `'fade'`</Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>`'slide'`</Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>{`Specifies the animation preset for the ActionSheet.`}</Table.TText>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Table.TText>
+            <InlineCode>contentSize</InlineCode>
+          </Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>any</Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>-</Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>{`Specifies the content size for the ActionSheet.`}</Table.TText>
+        </Table.TD>
+      </Table.TR>
+      <Table.TR>
+        <Table.TD>
+          <Table.TText>
+            <InlineCode>children</InlineCode>
+          </Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>any</Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>-</Table.TText>
+        </Table.TD>
+        <Table.TD>
+          <Table.TText>{`The content to display inside the ActionSheet.`}</Table.TText>
         </Table.TD>
       </Table.TR>
     </Table.TBody>
