feat: alert component

--- a/example/storybook/src/components/Alert/index.stories.mdx
+++ b/example/storybook/src/components/Alert/index.stories.mdx
@@ -1,8 +1,8 @@
 ---
 title: Alert | UI
-description: A Alert component is used to create clickable elements that perform an action when pressed.
+description: Alert component is used to create clickable elements that perform an action when pressed.
 pageTitle: Alert
-pageDescription: A Alert component is used to create clickable elements that perform an action when pressed.
+pageDescription: Alert component is used to create clickable elements that perform an action when pressed.
 showHeader: true
 ---
 
