feat: alert fixed

--- a/example/storybook/src/components/Alert/index.stories.mdx
+++ b/example/storybook/src/components/Alert/index.stories.mdx
@@ -10,15 +10,8 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title="components/Alert" />
 
-import {
-  Alert,
-  CheckCircleIcon,
-  CloseIconFilled,
-  NotificationIcon,
-  WarningIcon,
-  Center,
-  VStack,
-} from './Alert';
+import { Alert, CheckCircleIcon, CloseIconFilled } from './Alert';
+import { NotificationIcon, WarningIcon, Center, VStack } from './Alert';
 import { transformedCode } from '../../utils';
 import {
   AppProvider,
